// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText should render custom class 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={false}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;

exports[`InputText should render default case 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={false}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;

exports[`InputText should render different id 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={false}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;

exports[`InputText should render different id based on fieldName 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={false}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;

exports[`InputText should render different input type 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={false}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;

exports[`InputText should render disabled input 1`] = `
<div
  className="input ship-notApplicable text"
  htmlFor="ship-number"
>
  <p
    className="input ship-number text"
  >
    <label
      htmlFor="ship-number"
    >
      Number
    </label>
    <input
      autoComplete="on"
      autoFocus={false}
      className="input-small"
      data-hj-whitelist={true}
      disabled={true}
      id="ship-number"
      maxLength="9"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="text"
      value=""
    />
  </p>
  <p
    className="input ship-checkboxNumberLabel text"
  >
    <label
      htmlFor="ship-checkboxNumberLabel"
    >
      No number
    </label>
    <input
      className="input ship-checkboxNumberLabel type"
      id="ship-number"
      name="number"
      onBlur={[MockFunction]}
      onChange={[Function]}
      placeholder="Optional"
      type="checkbox"
    />
  </p>
</div>
`;
